# hemeroteca

./: .gitignore  Cargo.toml  Makefile  README.md  feeds.txt  rustfmt.toml
examples/: fetch.rs
src/: common.rs  embeddings.rs  lib.rs  main.rs  openai.rs  relevance.rs  storage.rs
tests/: feed.xml
