[package]
name = "hemeroteca"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
html2text = "0.12.4"
log = "0.4.21"
rand = "0.8.5"
regex = "1.10.4"
reqwest = "0.11.27"
rss = "2.0.7"
select = "0.6.0"
sqlite = "0.36.1"
tokio = { version = "1.36.0", features = ["full"] }
