[package]
name = "hemeroteca"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
arrow = "53.0.0"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
chrono = "0.4.38"
clap = { version = "4.5.3", features = ["derive"], optional = true }
csv = "1.3.0"
dirs = "5.0.1"
env_logger = "0.11.3"
hf-hub = "0.3.2"
html2text = "0.12.4"
log = "0.4.21"
num_cpus = "1.16.0"
once_cell = "1.19.0"
parquet = "53.0.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.11.27",  features = ["json"] }
rss = "2.0.7"
select = "0.6.0"
serde = "1.0.207"
serde_json = "1.0.124"
sqlite = "0.36.1"
strsim = "0.11.1"
tokenizers = "0.20.0"
tokio = { version = "1.36.0", features = ["full"] }

[features]
default = []
cli = ["clap"]

[lib]
name = "hemeroteca"
path = "src/lib.rs"

[[bin]]
name = "report"
path = "src/bin/report.rs"
required-features = ["cli"]
